Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjObjectField.quorum
class Main
    Object v
    Boolean t
    action Main
        Test(v)
    end

    action Test(Boolean var)
    end
end
